# stela

./: .clang-format  .gitignore  AGENTS.md  CHANGELOGS.md  CLAUDE.md  LICENSE  LICENSE.md  NOTICE.md  README.md  buildCommon.cmake  buildCommonPre.cmake  cmakeCommands.cmake  codecov.yml  compileOptions.cmake  postScript.cmake  repomix.config.json  variables.cmake
.github/workflows/: ci-main.yml  ci-release.yml
module/: CMakeLists.txt  clog.hpp  stela.hpp
module/clog/: CMakeLists.txt  common.hpp  enablesZone.cpp  enablesZone.hpp  filter.hpp  logger.cpp  logger.hpp  richLog.cpp  richLog.hpp  scopeLog.cpp  scopeLog.hpp  stream.hpp  when.cpp  when.hpp
module/clog/common/: _nout.hpp  dep.hpp  macro.hpp
module/clog/filter/: errPassFilter.cpp  errPassFilter.hpp  filterable.hpp  filters.cpp  filters.hpp
module/clog/stream/: consoleStream.cpp  consoleStream.hpp  fileLogStream.cpp  fileLogStream.hpp  stream.cpp  stream.hpp
module/indep/: CMakeLists.txt  common.hpp  def.hpp  dlib.hpp  fsystem.hpp  helper.hpp  macro.hpp
module/indep/common/: dep.hpp  typedef.hpp
module/indep/def/: _nout.hpp  buildInformation.hpp.in  common.hpp
module/indep/fsystem/: fsystem.cpp  fsystem.hpp
module/indep/helper/: buildFeature.cpp  buildFeature.hpp  cpIter.cpp  cpIter.hpp  dlib.cpp  dlib.hpp  dumpable.hpp  end.cpp  end.hpp  errLv.cpp  errLv.hpp  errorable.cpp  errorable.hpp  line.cpp  line.hpp  platformAPI.cpp  platformAPI.hpp  tmay.hpp  tmay.inl  tmedium.hpp  tmedium.inl  tres.hpp  tres.inl  typeTrait.hpp
module/indep/macro/: argGetter.hpp  argList.hpp  byeolMeta.hpp  declThis.hpp  defThis.hpp  evaluator.hpp  forEach.hpp  helper.hpp  initiator.hpp  or.hpp  overload.hpp  pair.hpp  pairx.hpp  sideFunc.hpp  staticAsserts.hpp  to.hpp  unconstFunc.hpp  warning.hpp  when.cpp  when.hpp
module/memlite/: CMakeLists.txt  binder.hpp  common.hpp  interface.hpp  watcher.hpp
module/memlite/binder/: bindTacticable.hpp  binder.cpp  binder.hpp  strTactic.cpp  strTactic.hpp  tbindable.hpp  tbindable.inl  tstr.hpp  tstr.inl  tweak.hpp  tweak.inl  weakTactic.cpp  weakTactic.hpp
module/memlite/common/: _nout.hpp  dep.hpp
module/memlite/interface/: clonable.hpp  id.cpp  id.hpp  instance.cpp  instance.hpp  instancer.cpp  instancer.hpp
module/memlite/internal/: memliteInternal.cpp  memliteInternal.hpp
module/memlite/pool/: allocator.cpp  allocator.hpp  chunk.cpp  chunk.hpp  chunks.cpp  chunks.hpp  memoryHaver.cpp  memoryHaver.hpp  pool.cpp  pool.hpp
module/memlite/watcher/: life.cpp  life.hpp  watcher.cpp  watcher.hpp
module/meta/: CMakeLists.txt  common.hpp  rtti.hpp  type.hpp
module/meta/common/: _nout.hpp  def.hpp  dep.hpp  macro.hpp  richLog.cpp  richLog.hpp
module/meta/interface/: typeProvidable.cpp  typeProvidable.hpp
module/meta/rtti/: rtti.hpp
module/meta/type/: adam.cpp  adam.hpp  ttype.hpp  ttypeBase.cpp  ttypeBase.hpp  ttypeBase.inl  type.cpp  type.hpp  type.inl
module/stela/: CMakeLists.txt  ast.hpp  common.hpp  parser.hpp
module/stela/ast/: nulStela.cpp  nulStela.hpp  point.cpp  point.hpp  stela.cpp  stela.hpp  valStela.cpp  valStela.hpp  verStela.cpp  verStela.hpp
module/stela/common/: _nout.hpp  dep.hpp  richLog.cpp  richLog.hpp
module/stela/parser/: stelaParser.cpp  stelaParser.hpp  stelaSmartDedent.cpp  stelaSmartDedent.hpp  stelaTokenDispatcher.cpp  stelaTokenDispatcher.hpp  stelaTokenScanable.cpp  stelaTokenScanable.hpp
module/stela/parser/bison/: stelaLowparser.y  stelaLowscanner.l  stelaTokenScan.cpp  stelaTokenScan.hpp
module/test/: CMakeLists.txt  byeolTest.cc  byeolTest.hpp  main.cc
module/test/common/: dep.hpp
module/test/unit/clog/: consoleStreamTest.cc
module/test/unit/indep/: buildFeatureTest.cc  dlibTest.cc  fsystemTest.cc  macroTest.cc  platformAPITest.cc  tresTest.cc
module/test/unit/memlite/: binderTest.cc  chunkTest.cc  chunksTest.cc  instanceTest.cc  memoryAllocRobustTest.cc  watcherTest.cc
module/test/unit/meta/: rttiTest.cc  ttypeTest.cc
module/test/unit/stela/: basicParsingTest.cc  stelaSmartDedentTest.cc  stelaTest.cc
